# cpp-project-template

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: AddBoost.cmake  AddCatch2.cmake  AddFmt.cmake  AddGlfw.cmake  Submodule.cmake
lib/Debug/: fmtd.lib
src/: CMakeLists.txt  StaticInfo.h.in
test/: CMakeLists.txt
